--- a/09-MY451-3waytables.Rmd
+++ b/09-MY451-3waytables.Rmd
@@ -42,7 +42,7 @@ largest number of applications, labelled below Departments 2–5
 applicant and whether he or she was admitted to the university.
 
   ------------- ------------ ---------- ------- -------
-  \                 Admitted   Admitted       \       \
+  \                 Admitted   Admitted       \       \  
   Sex                     No        Yes   % Yes   Total
   Male                  1180        686    36.8    1866
   Female                1259        468    27.1    1727
@@ -65,7 +65,7 @@ which an applicant had applied. Information on the department as well as
 sex and admission is shown in Table \@ref(tab:t-berkeley2).
 
   ---------------------------- ---------- ---------- ---------- ------- -------
-  \                            \            Admitted   Admitted       \       \
+  \                            \            Admitted   Admitted       \       \  
   Department                   Sex                No        Yes   % Yes   Total
   2                            Male              207        353    63.0     560
                                Female              8         17    68.0      25
@@ -134,7 +134,7 @@ overall because relatively more of them applied to the more selective
 departments and fewer to the easy ones.
 
   ---------------------- -------------- ----- ----- ----- -----
-  \                          Department     \     \     \     \
+  \                          Department     \     \     \     \  
   Of all applicants                   2     3     4     5     6
   % Male                             96    35    53    33    52
   % Admitted                         63    35    34    25     6
@@ -214,8 +214,8 @@ original two-way table are thus unchanged after controlling for sex.
   short-term gains in Example 9.2, controlling for sex of respondent.
   The numbers below the frequencies are proportions within rows. $\chi^{2}=82.4$, $df=9$, $P<0.001$. $\gamma=-0.376$.
 
-  -------------------------------- ----------- ----------- ----------- -------
-  **WOMEN**                           Slightly                    Very
+  ---------------- --------------- ----------- ----------- ----------- -------
+  **WOMEN**                      \    Slightly           \        Very       \  
   Age group             Irrelevant   important   Important   important   Total
 
   Under 45                       8          10           8           4      30
@@ -237,7 +237,7 @@ original two-way table are thus unchanged after controlling for sex.
   Total                        116          47          19          19     201
 
                              0.577       0.234       0.095       0.095   1.000
-  -------------------------------- ----------- ----------- ----------- -------
+  ---------------- --------------- ----------- ----------- ----------- -------
 
   : (\#tab:t-investors3)Frequencies of respondents by age group and attitude towards
   short-term gains in Example 9.2, controlling for sex of respondent.
@@ -455,18 +455,18 @@ misleading, as the finding is not really paradoxical in any logical
 sense. Instead, it is again a consequence of a particular pattern of
 associations between the control variable and the other two variables.
 
-  ---------------- ----------------------------------------------- -------------------------------------------- ----------------------- ------------
-  \                                       \% Alive after 20 years:                                            \   Number (in 1972--74):            \
-  Age group                                                Smokers                                   Nonsmokers   Smokers                 Nonsmokers
-  18–24                                                       96.4                                         98.4                      55           62
-  25–34                                                       97.6                                         96.8                     124          157
-  35–44                                                       87.2                                         94.2                     109          121
-  45–54                                                       79.2                                         84.6                     130           78
-  55–64                                                       55.7                                         66.9                     115          121
-  65–74                                                       19.4                                         21.7                      36          129
-  75–                                                          0.0                                          0.0                      12           64
-  All age groups                                              76.1                                         68.6                     582          732
-  ---------------- ----------------------------------------------- -------------------------------------------- ----------------------- ------------
+  ---------------- --------------------------- ------------ ----------------------- ------------
+  \                   \% Alive after 20 years:            \   Number (in 1972--74):            \  
+  Age group                            Smokers   Nonsmokers   Smokers                 Nonsmokers
+  18–24                                   96.4         98.4                      55           62
+  25–34                                   97.6         96.8                     124          157
+  35–44                                   87.2         94.2                     109          121
+  45–54                                   79.2         84.6                     130           78
+  55–64                                   55.7         66.9                     115          121
+  65–74                                   19.4         21.7                      36          129
+  75–                                      0.0          0.0                      12           64
+  All age groups                          76.1         68.6                     582          732
+  ---------------- --------------------------- ------------ ----------------------- ------------
 
   : (\#tab:t-whickham2)Percentage of respondents in Example 9.4 surviving at the time of
   the second survey, by smoking status and age group in 1972–74.
@@ -489,7 +489,7 @@ all the 582 smokers, 9% of all the 732 nonsmokers and 9% of the 1314
 respondents overall were in this age group.
 
   --------- ------------- --------------------------------------- ----------------------------- ------------------------ -------
-          \ \                        Row and column \%                         \                        Total                  \
+          \ \                        Row and column \%                         \                        Total                  \  
     % Alive Age group                     Smokers                          Nonsmokers                      \%              Count
          97 18–24                           47                                 53                         100                117
                                            (10)                                (9)                        (9)            
