--- a/09-MY451-3waytables.Rmd
+++ b/09-MY451-3waytables.Rmd
@@ -41,13 +41,14 @@ largest number of applications, labelled below Departments 2–5
 \@ref(tab:t-berkeley1) shows the two-way contingency table of the sex of the
 applicant and whether he or she was admitted to the university.
 
-  ------------- ------------ ---------- ------- -------
-  \                 Admitted   Admitted       \       \  
+  -----------------------------------------------------
+  \                 Admitted   Admitted       \       \    
   Sex                     No        Yes   % Yes   Total
+  ------------- ------------ ---------- ------- -------
   Male                  1180        686    36.8    1866
   Female                1259        468    27.1    1727
   Total                 2439       1154    32.1    3593
-  ------------- ------------ ---------- ------- -------
+  -----------------------------------------------------
 
   : (\#tab:t-berkeley1)Table of sex of applicant vs. admission in the Berkeley admissions
   data. The column labelled ‘% Yes’ is the percentage of applicants
@@ -64,9 +65,10 @@ considered in the analysis. One of them is the academic department to
 which an applicant had applied. Information on the department as well as
 sex and admission is shown in Table \@ref(tab:t-berkeley2).
 
-  ---------------------------- ---------- ---------- ---------- ------- -------
-  \                            \            Admitted   Admitted       \       \  
+  -----------------------------------------------------------------------------
+                               \            Admitted   Admitted       \       \    
   Department                   Sex                No        Yes   % Yes   Total
+  ---------------------------- ---------- ---------- ---------- ------- -------
   2                            Male              207        353    63.0     560
                                Female              8         17    68.0      25
                                Total             215        370    63.2     585
@@ -88,7 +90,7 @@ sex and admission is shown in Table \@ref(tab:t-berkeley2).
                                Total             668         46     6.4     714
   $\chi^{2}=0.38$, $P=0.54$
   Total                                         2439       1154    32.1    3593
-  ---------------------------- ---------- ---------- ---------- ------- -------
+  -----------------------------------------------------------------------------
 
   : (\#tab:t-berkeley2)Sex of applicant vs. admission by academic department in the
   Berkeley admissions data.
@@ -133,13 +135,14 @@ Table \@ref(tab:t-berkeley1). In essence, women had a lower admission rate
 overall because relatively more of them applied to the more selective
 departments and fewer to the easy ones.
 
-  ---------------------- -------------- ----- ----- ----- -----
-  \                          Department     \     \     \     \  
+  -------------------------------------------------------------
+                             Department     \     \     \     \    
   Of all applicants                   2     3     4     5     6
+  ---------------------- -------------- ----- ----- ----- -----
   % Male                             96    35    53    33    52
   % Admitted                         63    35    34    25     6
   Number of applicants              585   918   792   584   714
-  ---------------------- -------------- ----- ----- ----- -----
+  -------------------------------------------------------------
 
   : (\#tab:t-berkeley3)Percentages of male applicants and applicants admitted by department
   in the Berkeley admissions data.
@@ -184,10 +187,10 @@ strength as measured by the $\gamma$ statistic ($\gamma=-0.376$ among
 men and $\gamma=-0.395$ among women). The conclusions obtained from the
 original two-way table are thus unchanged after controlling for sex.
 
-  ---------------- --------------- ----------- ----------- ----------- -------
+  ----------------------------------------------------------------------------
   **MEN**                        \    Slightly           \        Very       \
   Age group             Irrelevant   important   Important   important   Total
-
+  ---------------- --------------- ----------- ----------- ----------- -------
   Under 45                      29          35          30          22     116
 
                              0.250       0.302       0.259       0.190   1.000
@@ -208,16 +211,16 @@ original two-way table are thus unchanged after controlling for sex.
   Total                        378         188         126          79     771
 
                              0.490       0.244       0.163       0.102   1.000
-  ---------------- --------------- ----------- ----------- ----------- -------
+  ----------------------------------------------------------------------------
 
   : (\#tab:t-investors3)Frequencies of respondents by age group and attitude towards
   short-term gains in Example 9.2, controlling for sex of respondent.
   The numbers below the frequencies are proportions within rows. $\chi^{2}=82.4$, $df=9$, $P<0.001$. $\gamma=-0.376$.
 
-  ---------------- --------------- ----------- ----------- ----------- -------
+  ----------------------------------------------------------------------------
   **WOMEN**                      \    Slightly           \        Very       \  
   Age group             Irrelevant   important   Important   important   Total
-
+  ---------------- --------------- ----------- ----------- ----------- -------
   Under 45                       8          10           8           4      30
 
                              0.267       0.333       0.267       0.133   1.000
@@ -237,7 +240,7 @@ original two-way table are thus unchanged after controlling for sex.
   Total                        116          47          19          19     201
 
                              0.577       0.234       0.095       0.095   1.000
-  ---------------- --------------- ----------- ----------- ----------- -------
+  ----------------------------------------------------------------------------
 
   : (\#tab:t-investors3)Frequencies of respondents by age group and attitude towards
   short-term gains in Example 9.2, controlling for sex of respondent.
@@ -258,9 +261,10 @@ differences in probabilities of survival between the groups. The table
 suggests, in particular, that women and children among the passengers
 were more likely to survive than male passengers or the ship’s crew.
 
-  ---------------------------- ---------- --------- ---------
-                                 Survivor           
+  -----------------------------------------------------------
+                                 Survivor         \         \    
   Group                               Yes        No     Total
+  ---------------------------- ---------- --------- ---------
   Male passenger                      146       659       805
                                   (0.181)   (0.819)   (1.000)
   Female or child passenger           353       158       511
@@ -269,7 +273,7 @@ were more likely to survive than male passengers or the ship’s crew.
                                   (0.240)   (0.760)   (1.000)
   Total                               711      1490      2201
                                   (0.323)   (0.677)   (1.000)
-  ---------------------------- ---------- --------- ---------
+  -----------------------------------------------------------
 
   : (\#tab:t-titanic2)Survival status of the people aboard the *Titanic*, divided into
   three groups. The numbers in brackets are proportions of survivors and
@@ -283,10 +287,10 @@ survival status for them is given by Table \@ref(tab:t-titanic2), ignoring
 the row for crew members. This association is strongly significant, with
 $\chi^{2}=344$ and $P<0.001$.
 
-  -------- ---------------- ------------ ------- -------
-  \        \                    Survivor       \       \
+  ------------------------------------------------------
+  \        \                    Survivor       \       \    
   Class    Group                     Yes      No   Total
-
+  -------- ---------------- ------------ ------- -------
   First    Man                        57     118     175
 
                                    0.326   0.674   1.000
@@ -326,7 +330,7 @@ $\chi^{2}=344$ and $P<0.001$.
   Total                              499     817    1316
 
                                    0.379   0.621   1.000
-  -------- ---------------- ------------ ------- -------
+  ------------------------------------------------------
 
   :(\#tab:t-titanic3)Survival status of the passengers of the *Titanic*, classified by
   class and sex. The numbers below the frequencies are proportions
@@ -455,9 +459,10 @@ misleading, as the finding is not really paradoxical in any logical
 sense. Instead, it is again a consequence of a particular pattern of
 associations between the control variable and the other two variables.
 
-  ---------------- --------------------------- ------------ ----------------------- ------------
-  \                   \% Alive after 20 years:            \   Number (in 1972--74):            \  
+  ----------------------------------------------------------------------------------------------
+  \                   \% Alive after 20 years:            \   Number (in 1972--74):            \    
   Age group                            Smokers   Nonsmokers   Smokers                 Nonsmokers
+  ---------------- --------------------------- ------------ ----------------------- ------------
   18–24                                   96.4         98.4                      55           62
   25–34                                   97.6         96.8                     124          157
   35–44                                   87.2         94.2                     109          121
@@ -466,7 +471,7 @@ associations between the control variable and the other two variables.
   65–74                                   19.4         21.7                      36          129
   75–                                      0.0          0.0                      12           64
   All age groups                          76.1         68.6                     582          732
-  ---------------- --------------------------- ------------ ----------------------- ------------
+  ----------------------------------------------------------------------------------------------
 
   : (\#tab:t-whickham2)Percentage of respondents in Example 9.4 surviving at the time of
   the second survey, by smoking status and age group in 1972–74.
@@ -488,27 +493,28 @@ were still alive at the time of the second survey. Furthermore, 10% of
 all the 582 smokers, 9% of all the 732 nonsmokers and 9% of the 1314
 respondents overall were in this age group.
 
-  --------- ------------- --------------------------------------- ----------------------------- ------------------------ -------
-          \ \                        Row and column \%                         \                        Total                  \  
-    % Alive Age group                     Smokers                          Nonsmokers                      \%              Count
-         97 18–24                           47                                 53                         100                117
-                                           (10)                                (9)                        (9)            
-         97 25–34                           44                                 56                         100                281
-                                           (21)                               (21)                        (21)           
-         91 35–44                           47                                 53                         100                230
-                                           (19)                               (17)                        (18)           
-         81 45–54                           63                                 38                         100                208
-                                           (22)                               (11)                        (16)           
-         61 55–64                           49                                 51                         100                236
-                                           (20)                               (17)                        (13)           
-         21 65–74                           22                                 78                         100                165
-                                            (6)                               (18)                        (13)           
-          0 75–                             17                                 83                         100                 77
-                                            (2)                                (9)                        (6)            
-         72 Total %                         44                                 56                         100            
-                                           (100)                              (100)                      (100)           
-        945 Total count                     582                                732                                          1314
-  --------- ------------- --------------------------------------- ----------------------------- ------------------------ -------
+  ----------------------------------------------------------------------------------
+          \ \                Row and column \%           \          Total          \    
+    % Alive Age group             Smokers            Nonsmokers        \%      Count
+  --------- ------------- ----------------------- --------------- ---------- -------
+         97 18–24                   47                   53           100        117
+                                   (10)                  (9)          (9)    
+         97 25–34                   44                   56           100        281
+                                   (21)                 (21)          (21)   
+         91 35–44                   47                   53           100        230
+                                   (19)                 (17)          (18)   
+         81 45–54                   63                   38           100        208
+                                   (22)                 (11)          (16)   
+         61 55–64                   49                   51           100        236
+                                   (20)                 (17)          (13)   
+         21 65–74                   22                   78           100        165
+                                    (6)                 (18)          (13)   
+          0 75–                     17                   83           100         77
+                                    (2)                  (9)          (6)    
+         72 Total %                 44                   56           100    
+                                   (100)                (100)        (100)   
+        945 Total count             582                  732                    1314
+  ----------------------------------------------------------------------------------
 
   : (\#tab:t-whickham3)Two-way contingency tables of age group vs. survival (on the left)
   and age group vs. smoking (on the right) in Example 6.4. The
