--- a/09-MY451-3waytables.Rmd
+++ b/09-MY451-3waytables.Rmd
@@ -46,7 +46,9 @@ applicant and whether he or she was admitted to the university.
   Sex                     No        Yes   % Yes   Total
   ------------- ------------ ---------- ------- -------
   Male                  1180        686    36.8    1866
+
   Female                1259        468    27.1    1727
+
   Total                 2439       1154    32.1    3593
   -----------------------------------------------------
 
@@ -70,25 +72,45 @@ sex and admission is shown in Table \@ref(tab:t-berkeley2).
   Department                   Sex                No        Yes   % Yes   Total
   ---------------------------- ---------- ---------- ---------- ------- -------
   2                            Male              207        353    63.0     560
+
                                Female              8         17    68.0      25
+
                                Total             215        370    63.2     585
+
   $\chi^{2}=0.25$, $P=0.61$
+
   3                            Male              205        120    36.9     325
+
                                Female            391        202    34.1     593
+
                                Total             596        322    35.1     918
+
   $\chi^{2}=0.75$, $P=0.39$
+
   4                            Male              279        138    33.1     417
+
                                Female            244        131    34.9     375
+
                                Total             523        269    34.0     792
+
   $\chi^{2}=0.30$, $P=0.59$
+
   5                            Male              138         53    27.7     191
+
                                Female            299         94    23.9     393
+
                                Total             437        147    25.2     584
+
   $\chi^{2}=1.00$, $P=0.32$
+
   6                            Male              351         22     5.9     373
+
                                Female            317         24     7.0     341
+
                                Total             668         46     6.4     714
+
   $\chi^{2}=0.38$, $P=0.54$
+
   Total                                         2439       1154    32.1    3593
   -----------------------------------------------------------------------------
 
@@ -140,7 +162,9 @@ departments and fewer to the easy ones.
   Of all applicants                   2     3     4     5     6
   ---------------------- -------------- ----- ----- ----- -----
   % Male                             96    35    53    33    52
+
   % Admitted                         63    35    34    25     6
+
   Number of applicants              585   918   792   584   714
   -------------------------------------------------------------
 
@@ -262,16 +286,23 @@ suggests, in particular, that women and children among the passengers
 were more likely to survive than male passengers or the ship’s crew.
 
   -----------------------------------------------------------
-                                 Survivor         \         \    
+                                Survivor:         \         \    
   Group                               Yes        No     Total
   ---------------------------- ---------- --------- ---------
   Male passenger                      146       659       805
+
                                   (0.181)   (0.819)   (1.000)
+
   Female or child passenger           353       158       511
+
                                   (0.691)   (0.309)   (1.000)
+
   Crew member                         212       673       885
+
                                   (0.240)   (0.760)   (1.000)
+
   Total                               711      1490      2201
+
                                   (0.323)   (0.677)   (1.000)
   -----------------------------------------------------------
 
@@ -288,7 +319,7 @@ the row for crew members. This association is strongly significant, with
 $\chi^{2}=344$ and $P<0.001$.
 
   ------------------------------------------------------
-  \        \                    Survivor       \       \    
+  \        \                   Survivor:       \       \    
   Class    Group                     Yes      No   Total
   -------- ---------------- ------------ ------- -------
   First    Man                        57     118     175
@@ -461,15 +492,22 @@ associations between the control variable and the other two variables.
 
   ----------------------------------------------------------------------------------------------
   \                   \% Alive after 20 years:            \   Number (in 1972--74):            \    
-  Age group                            Smokers   Nonsmokers   Smokers                 Nonsmokers
+  Age group                            Smokers   Nonsmokers                 Smokers   Nonsmokers
   ---------------- --------------------------- ------------ ----------------------- ------------
   18–24                                   96.4         98.4                      55           62
+
   25–34                                   97.6         96.8                     124          157
+
   35–44                                   87.2         94.2                     109          121
+
   45–54                                   79.2         84.6                     130           78
+
   55–64                                   55.7         66.9                     115          121
+
   65–74                                   19.4         21.7                      36          129
+
   75–                                      0.0          0.0                      12           64
+
   All age groups                          76.1         68.6                     582          732
   ----------------------------------------------------------------------------------------------
 
@@ -498,21 +536,37 @@ respondents overall were in this age group.
     % Alive Age group             Smokers            Nonsmokers        \%      Count
   --------- ------------- ----------------------- --------------- ---------- -------
          97 18–24                   47                   53           100        117
+
                                    (10)                  (9)          (9)    
+
          97 25–34                   44                   56           100        281
+
                                    (21)                 (21)          (21)   
+
          91 35–44                   47                   53           100        230
+
                                    (19)                 (17)          (18)   
+
          81 45–54                   63                   38           100        208
+
                                    (22)                 (11)          (16)   
+
          61 55–64                   49                   51           100        236
+
                                    (20)                 (17)          (13)   
+
          21 65–74                   22                   78           100        165
+
                                     (6)                 (18)          (13)   
+
           0 75–                     17                   83           100         77
+
                                     (2)                  (9)          (6)    
+
          72 Total %                 44                   56           100    
+
                                    (100)                (100)        (100)   
+
         945 Total count             582                  732                    1314
   ----------------------------------------------------------------------------------
 
