--- a/08-MY451-regression.Rmd
+++ b/08-MY451-regression.Rmd
@@ -1991,10 +1991,10 @@ coefficients of the dummy variables.
   Income level                                                          
   (Reference group: Low)                                                
 
-  &nbsp;Middle                   $-3.210$   0.631   $-5.09$    $<0.001$    $(-4.461;
+  &nbsp;&nbsp;Middle                   $-3.210$   0.631   $-5.09$    $<0.001$    $(-4.461;
                                                                             -1.958)$
 
-  &nbsp;High                     $-3.296$   1.039   $-3.17$       0.002    $(-5.357;
+  &nbsp;&nbsp;High                     $-3.296$   1.039   $-3.17$       0.002    $(-5.357;
                                                                             -1.235)$
   ------------------------- ------------- ------- --------- ----------- ----------------
 
@@ -2245,13 +2245,13 @@ over the study period. Summary statistics for the variables are shown in
 Table \@ref(tab:t-fastfood-descr).
 
   ------------------ ------ ------- ------------- --------------- ------------
-  \                       \       \      Minimum-  wage variable:       \
+  \                       \       \      Minimum-  wage variable:   Response
+                                                                    variable:
 
-  Group                   %   $(n)$      Affected    Wage gap      Response
-                                          % ($n$)   (mean for      variable:
-                                                     affected      Employment
-                                                   restaurants)     change
-                                                                    (mean)
+  Group                   %   $(n)$      Affected    Wage gap      Employment
+                                          % ($n$)   (mean for        change
+                                                     affected        (mean)
+                                                   restaurants)
 
   Overall               100   (368)    72.8 (268)     0.115        $-0.30$
 
@@ -2294,21 +2294,21 @@ Table \@ref(tab:t-fastfood-descr).
 
   Ownership (vs. Franchisee)                                               
 
-  &nbsp;Company                           0.22        (0.20)          0.43      (0.40)
+  &nbsp;&nbsp;Company                           0.22        (0.20)          0.43      (0.40)
 
                                         (1.06)          0.84        (1.07)        0.69
 
   Chain (vs. Burger King)                                                  
 
-  &nbsp;Roy Rogers                       -2.00       (-1.56)         -1.84     (-1.43)
+  &nbsp;&nbsp;Roy Rogers                       -2.00       (-1.56)         -1.84     (-1.43)
 
                                         (1.28)          0.12        (1.29)        0.15
 
-  &nbsp;Wendy’s                           0.15        (0.11)          0.36      (0.24)
+  &nbsp;&nbsp;Wendy’s                           0.15        (0.11)          0.36      (0.24)
 
                                         (1.44)          0.92        (1.46)        0.81
 
-  &nbsp;KFC                               0.64        (0.51)          0.81      (0.64)
+  &nbsp;&nbsp;KFC                               0.64        (0.51)          0.81      (0.64)
 
                                         (1.25)          0.61        (1.26)        0.52
 
