--- a/02-MY451-descr1.Rmd
+++ b/02-MY451-descr1.Rmd
@@ -133,35 +133,46 @@ and attitude in the survey example, which are shown in Tables
 
   : (\#tab:t-region)Frequency distribution of the region variable in the country data.
 
-  ----------- ----------- ------------ ------ ------------
+  --------------------------------------------------------
   Democracy        \           \            \   Cumulative
   score        Frequency   Proportion       %            %
-  0               35         0.226       22.6         22.6
-  1               12         0.077        7.7         30.3
-  2                4         0.026        2.6         32.9
-  3                6         0.039        3.9         36.8
-  4                5         0.032        3.2         40.0
-  5                5         0.032        3.2         43.2
-  6               12         0.077        7.7         50.9
-  7               13         0.084        8.4         59.3
-  8               16         0.103       10.3         69.6
-  9               15         0.097        9.7         79.3
-  10              32         0.206       20.6         99.9
-  Total           155        0.999       99.9
   ----------- ----------- ------------ ------ ------------
+  0               35         0.226       22.6         22.6
+
+  1               12         0.077        7.7         30.3
+
+  2                4         0.026        2.6         32.9
+
+  3                6         0.039        3.9         36.8
+
+  4                5         0.032        3.2         40.0
+
+  5                5         0.032        3.2         43.2
+
+  6               12         0.077        7.7         50.9
+
+  7               13         0.084        8.4         59.3
+
+  8               16         0.103       10.3         69.6
+
+  9               15         0.097        9.7         79.3
+
+  10              32         0.206       20.6         99.9
+
+  Total           155        0.999       99.9
+  --------------------------------------------------------
 
   : (\#tab:t-democ)Frequency distribution of the democracy index in the country
   data.
 
-  -------------------------------- ----------- ------------ ------- --------------
   Response                           Frequency  Proportion        %   Cumulative %
+  -------------------------------- ----------- ------------ ------- --------------
   Agree strongly (1)                       366    0.156        15.6           15.6
   Agree (2)                               1090    0.465        46.5           62.1
   Neither agree nor disagree (3)           426    0.182        18.2           80.3
   Disagree (4)                             387    0.165        16.5           96.8
   Disagree strongly (5)                     75    0.032         3.2          100.0
   Total                                   2344     1.00       100.0
-  -------------------------------- ----------- ------------ ------- --------------
 
   : (\#tab:t-attitude)Frequency distribution of responses to a question on attitude
   towards income redistribution in the survey example.
@@ -280,16 +291,16 @@ such a table for the respondents’ sex and attitude in our survey
 example. We use it to introduce the basic structure and terminology of
 contingency tables:
 
-  ------------------------ --------------- ------- --------------- ---------- ---------- -------
-  \                             Agree         \     Neither agree      \       Disagree        \
+  ----------------------------------------------------------------------------------------------
+                                Agree         \     Neither agree      \       Disagree        \
   Sex                          strongly     Agree   nor disagree    Disagree   strongly    Total
-
+  ------------------------ --------------- ------- --------------- ---------- ---------- -------
   Male                           160         439         187          200         41        1027
 
   Female                         206         651         239          187         34        1317
 
   Total                          366        1090         426          387         75        2344
-  ------------------------ --------------- ------- --------------- ---------- ---------- -------
+  ----------------------------------------------------------------------------------------------
 
   : (\#tab:t-sex-attitude)*``The government should take measures to reduce differences in income levels''*: Two-way table of frequencies of respondents in the survey example,
   by sex and attitude towards income redistribution. Data: European Social Survey, Round 5, 2010, UK respondents only.
@@ -365,16 +376,16 @@ proportion $0.156=366/2344$) of the respondents strongly agreed with the
 statement. The sum of the proportions over all the cells is 1, as shown
 in the bottom right corner of the table.
 
-  -------------- --------------- ------- --------------- ---------- ---------- -------
-  \                   Agree         \     Neither agree       \      Disagree     \
+  ------------------------------------------------------------------------------------
+                      Agree         \     Neither agree       \      Disagree     \
   Sex               strongly      Agree   nor disagree    Disagree   strongly    Total
-
+  -------------- --------------- ------- --------------- ---------- ---------- -------
   Male                0.068       0.187       0.080        0.085      0.017      0.438
 
   Female              0.088       0.278       0.102        0.080      0.015      0.562
 
   Total               0.156       0.465       0.182        0.165      0.032      1.000
-  -------------- --------------- ------- --------------- ---------- ---------- -------
+  ------------------------------------------------------------------------------------
 
   :(\#tab:t-sex-attitude-pr)*``The government should take measures to reduce differences in income levels''*: Two-way table of joint proportions of respondents in the survey
   example, with each combination of sex and attitude towards income
@@ -412,10 +423,10 @@ bracketed proportions in the ‘Total’ row are the proportions of the
 *marginal* distribution of the attitude variable, so they are the same
 as the proportions in the ‘Total’ row of Table \@ref(tab:t-sex-attitude-pr).
 
-  ------------- --------------- --------- --------------- ---------- ---------- -------
-  \                  Agree          \      Neither agree      \       Disagree     \
+  -------------------------------------------------------------------------------------
+                     Agree          \      Neither agree      \       Disagree     \
   Sex               strongly      Agree    nor disagree    Disagree   strongly    Total
-
+  ------------- --------------- --------- --------------- ---------- ---------- -------
   Male                160          439          187          200         41        1027
 
                     (0.156)      (0.428)      (0.182)      (0.195)    (0.040)     (1.0)
@@ -427,7 +438,7 @@ as the proportions in the ‘Total’ row of Table \@ref(tab:t-sex-attitude-pr).
   Total               366         1090          426          387         75        2344
 
                     (0.156)      (0.465)      (0.182)      (0.165)    (0.032)     (1.0)
-  ------------- --------------- --------- --------------- ---------- ---------- -------
+  -------------------------------------------------------------------------------------
 
   : (\#tab:t-sex-attitude-row)*``The government should take measures to reduce differences in income levels''*: Two-way table of frequencies of respondents in the survey example,
   by sex and attitude towards income redistribution. The numbers in
@@ -604,10 +615,10 @@ recorded in four categories as “Irrelevant”, “Slightly important”,
 crosstabulation of this variable with the age of the respondent in four
 age groups.
 
-  ------------- -------------- ----------- ----------- ----------- --------
+  -------------------------------------------------------------------------
   \                          \    Slightly           \        Very        \
   Age group         Irrelevant   important   Important   important    Total
-
+  ------------- -------------- ----------- ----------- ----------- --------
   Under 45                  37          45          38          26      146
 
                        (0.253)     (0.308)     (0.260)     (0.178)   (1.00)
@@ -625,7 +636,7 @@ age groups.
                        (0.663)     (0.220)     (0.065)     (0.052)   (1.00)
 
   Total                    494         235         145          98      972
-  ------------- -------------- ----------- ----------- ----------- --------
+  -------------------------------------------------------------------------
 
   : (\#tab:t-investors)Importance of short-term gains: Frequencies of respondents in the investment example, by age group
   and attitude towards short-term gains as investment goal. Conditional
@@ -885,11 +896,11 @@ values among the 155 countries, 66 of these values appear only once, and
 the largest frequency (for 0.8) is five. A frequency table of these
 values would be entirely unenlightening.
 
-  --------------- ----------- ------
+  ----------------------------------
   GDP                  \           \
   (thousands of               
   dollars)         Frequency       %
-
+  --------------- ----------- ------
   less than 2.0       49        31.6
 
   2.0–4.9             32        20.6
@@ -903,7 +914,7 @@ values would be entirely unenlightening.
   30.0 or more         5         3.2
 
   Total               155       99.9
-  --------------- ----------- ------
+  ----------------------------------
 
   : (\#tab:t-gdp)Frequency distribution of GDP per capita in the country data.
 
@@ -1523,8 +1534,8 @@ discussed below. Here a negative deviation indicates that an observation
 is smaller than the mean of 6 (e.g. $1-6=-5$), and a positive deviation
 that an observation is larger than the mean (e.g. $10-6=+4$).
 
-  --------- ------------------------ --------------------------- -------------------------------
   Student                    $Y_{i}$             $Y_{i}-\bar{Y}$           $(Y_{i}-\bar{Y})^{2}$
+  --------- ------------------------ --------------------------- -------------------------------
   1                                1                        $-5$                              25
   2                                2                        $-4$                              16
   3                                2                        $-4$                              16
@@ -1542,7 +1553,6 @@ that an observation is larger than the mean (e.g. $10-6=+4$).
   Sum                $\sum Y_{i}=84$     $\sum(Y_{i}-\bar{Y})=0$   $\sum(Y_{i}-\bar{Y})^{2}=152$
                    $\bar{Y}=84/14=6$   $\sum(Y_{i}-\bar{Y})/n=0$            $s^{2}=152/13=11.69$
                                                                             $s=\sqrt{11.69}=3.4$
-  --------- ------------------------ --------------------------- -------------------------------
 
   : (\#tab:t-sdex)Calculating the standard deviation of test marks for Class 3 in the
   class example at the beginning of Section \@ref(ss-descr1-nums-variation).
